// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radioField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <div
          aria-disabled="false"
          class="uv_v3r5nr4 uv_v3r5nr2"
          data-checked="false"
          data-invalid="false"
        >
          <input
            aria-disabled="false"
            class="uv_v3r5nra"
            id="_r_0_"
            name="test"
            type="radio"
            value="test"
          />
          <svg
            class="uv_v3r5nrb"
            viewBox="0 0 24 24"
          >
            <title>
              radio
            </title>
            <g>
              <circle
                class="uv_v3r5nre"
                cx="12"
                cy="12"
                r="10"
                stroke-width="6"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="uv_v3r5nrd"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="uv_v3r5nrc"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
            for="_r_0_"
          >
            Radio field
          </label>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <div
          aria-disabled="false"
          class="uv_v3r5nr4 uv_v3r5nr2"
          data-checked="true"
          data-invalid="false"
        >
          <input
            aria-disabled="false"
            checked=""
            class="uv_v3r5nra"
            id="_r_g_"
            name="test"
            type="radio"
            value="checked"
          />
          <svg
            class="uv_v3r5nrb"
            viewBox="0 0 24 24"
          >
            <title>
              radio
            </title>
            <g>
              <circle
                class="uv_v3r5nre"
                cx="12"
                cy="12"
                r="10"
                stroke-width="6"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="uv_v3r5nrd"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="uv_v3r5nrc"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
            for="_r_g_"
          >
            Radio field checked
          </label>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <div
          aria-disabled="true"
          class="uv_v3r5nr4 uv_v3r5nr2"
          data-checked="false"
          data-invalid="false"
        >
          <input
            aria-disabled="true"
            class="uv_v3r5nra"
            disabled=""
            id="_r_a_"
            name="test"
            type="radio"
            value="disabled"
          />
          <svg
            class="uv_v3r5nrb"
            viewBox="0 0 24 24"
          >
            <title>
              radio
            </title>
            <g>
              <circle
                class="uv_v3r5nre"
                cx="12"
                cy="12"
                r="10"
                stroke-width="6"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="uv_v3r5nrd"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="uv_v3r5nrc"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
            for="_r_a_"
          >
            Radio field disabled
          </label>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should render correctly with aria-label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <div
          aria-disabled="false"
          class="uv_v3r5nr4 uv_v3r5nr2"
          data-checked="false"
          data-invalid="false"
        >
          <input
            aria-disabled="false"
            aria-label="Radio field"
            class="uv_v3r5nra"
            id="_r_6_"
            name="test"
            type="radio"
            value="test"
          />
          <svg
            class="uv_v3r5nrb"
            viewBox="0 0 24 24"
          >
            <title>
              radio
            </title>
            <g>
              <circle
                class="uv_v3r5nre"
                cx="12"
                cy="12"
                r="10"
                stroke-width="6"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="uv_v3r5nrd"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="uv_v3r5nrc"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <div
          aria-disabled="false"
          class="uv_v3r5nr4 uv_v3r5nr2"
          data-checked="true"
          data-invalid="false"
        >
          <input
            aria-disabled="false"
            class="uv_v3r5nra"
            id="_r_m_"
            name="test"
            type="radio"
            value="events"
          />
          <svg
            class="uv_v3r5nrb"
            viewBox="0 0 24 24"
          >
            <title>
              radio
            </title>
            <g>
              <circle
                class="uv_v3r5nre"
                cx="12"
                cy="12"
                r="10"
                stroke-width="6"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="uv_v3r5nrd"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="uv_v3r5nrc"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
            for="_r_m_"
          >
            Radio field events
          </label>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
